# bullistic-gumdrop

./: Anchor.toml  README.md  package.json
.github/workflows/: publish-packages.yml  reusable-tests.yaml
keys/: README.md
programs/bullistic-gumdrop/src/: merkle_proof.rs
programs/formfn-gumdrop/: Cargo.toml
programs/formfn-gumdrop/src/: lib.rs  merkle_proof.rs
scripts/: deploy-program.sh  set-config.sh  setup.sh  test.sh  update-config.sh
scripts/anchor-configs/: Anchor-dev.toml  Anchor-local.toml  Anchor-test.toml
src/: index.ts
src/scripts/: createGumdropConfigScript.ts  estimateMerkleProofSizes.ts  getConfigAuthorityKeypair.ts  getUpdateConfigAuthorityKeypair.ts  lintProgramIdl.ts  modifyProgramIdl.ts  updateGumdropConfigScript.ts
src/sdk/: FormfnGumdropSdk.ts
src/sdk/constants/: programIds.ts
src/sdk/idl/: BullisticGumdrop.ts  FormfnGumdrop.ts  idl.ts  index.ts
src/sdk/instructions/: claimEditionIx.ts  closeDistributorAtaIx.ts  closeDistributorIx.ts  createGumdropConfigIx.ts  newDistributorIx.ts  updateDistributorIx.ts  updateGumdropConfigIx.ts
src/sdk/merkle-tree/: constructMerkleLeafNode.ts  constructMerkleTree.ts  constructProofForClaimants.ts
src/sdk/pdas/: findClaimCountPda.ts  findDistributorPda.ts  findDistributorWalletPda.ts  findGumdropConfigPda.ts  findTokenMetadataPda.ts
src/sdk/types/: ClaimantInfo.ts  (+4 more)
src/tests/: claimEditionInvalidCases.test.ts  claimEditionMultipleCases.test.ts  claimEditionSingleCase.test.ts  closeDistributor.test.ts  gumdropConfig.test.ts  reopenDistributor.test.ts  testEmptyDistributor.test.ts
(+28 files in other folders)
